# sakila-graphql

./: .gitignore  README.md
graphql-go/: Containerfile  go.mod  go.sum  gqlgen.yml
graphql-go/graph/: generated.go  schema.graphqls  schema.resolvers.go
graphql-go/graph/filter/: filter.go
graphql-go/graph/loader/: actor.go  category.go  film.go  language.go  loaders.go  pg_loader.go
graphql-go/graph/model/: actor.go  actor_filter.go  category.go  category_filter.go  film.go  film_filter.go  join_tables.go  language.go  language_filter.go
graphql-go/internal/config/: config.go
graphql-go/internal/inits/: postgres.go
graphql-go/internal/log/: logger.go
graphql-go/internal/query/: api.go  filter_group.go  join_column_filter.go  join_table_filter.go  ops.go  (+5 more)
graphql-rust/: Cargo.toml  Containerfile
graphql-rust/.cargo/: config.toml
graphql-rust/src/: config.rs  init.rs  lib.rs  main.rs  util.rs
graphql-rust/src/graphql/: mod.rs
graphql-rust/src/graphql/core/: filter.rs  loader.rs  mod.rs  query.rs
graphql-rust/src/graphql/loader/: actor.rs  actor_film_id.rs  category.rs  film.rs  film_actor_id.rs  film_category_id.rs  language.rs  mod.rs
graphql-rust/src/graphql/model/: actor.rs  category.rs  film.rs  join_tables.rs  language.rs  mod.rs
graphql-rust/src/query/: filter_group.rs  filter_type.rs  join_column_filter.rs  join_table_filter.rs  joined_table.rs  mod.rs  ops.rs  sql_builder.rs  table_filter.rs  value_filter.rs  visitor.rs
graphql-rust/src/server/: api_explorer.rs  app_state.rs  graphql.rs  logging.rs  mod.rs  request_id.rs  shutdown.rs
(+5 files in other folders)
